public/stylesheets/content.css
div#content {
  width: 100%
}

div#content.prevent-scroll {
  overflow-y: hidden;
}

div#content div.container {
  width: 45%;
  margin: 0 auto;
}

@media screen and (max-width: 768px) {
  div#content div.container {
    width: 95%;
  }
}

/* Markdown Styling */

div#content div.container div#post {
  padding-top: 4.00em;
  padding-bottom: 3.25em;
}

div#content div.container div#post div.post-date {
  color: #FF2D55;
  border: 1px solid #FF2D55;
  font-size: 0.75em;
  font-weight: 500;
  text-align: center;
  text-transform: uppercase;
  width: 10%;
  margin: 0 auto;
  margin-bottom: 2.50em;
  padding: 8px 4px;
}

div#content div.container div#post h1 {
  font-size: 2.15em;
  font-weight: 300;
  margin-bottom: 1.20em;
}

div#content div.container div#post h2 {
  font-size: 1.750em;
  margin-top: 1.50em;
  font-weight: 300;
}

div#content div.container div#post p {
  margin-top: 1.15em;
  font-size: 1.15em;
  line-height: 1.75em;
}

div#content div.container div#post blockquote {
  border-left: 4px solid rgba(0, 0, 0, 0.15);
  color: rgba(0, 0, 0, 0.750);
  padding-left: 1.500em;
  margin-left: 0.250em;
  font-size: 1.150em;
  font-style: italic;
}

